# Soulpage-genai-assignment-manideep

./: .env  .env.sample  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
core/: chatbot.py  memory.py
utils/: tools.py
